forming two pharagraph

--- a/victor-filatov.html
+++ b/victor-filatov.html
@@ -6,53 +6,9 @@
     </head>
     <body>      
                 
-                    <h1><image src="images/zeldman.png" width="400" lenght="200" alt="graphic image of zeldman"> The autobioghraphy of  John Doe</h1>
-                 <!--    <image src="images/zeldman.png" alt="graphic image of zeldman">
-
-                    <h1> Of Patterns and Power: Web Standards Then &amp; Now </h1>
-                    <!--<h2> Chapter 1 </h2>
-                     <p><a href="/">Molly</a> had been starting Oscar Wilde's rich and dramatic portrayals of the human
-                          condition came during the height of the prosperity that swept through London in the Victorian
-                           Era of the late 19th century. At a time when all citizens of Britain were finally able to emb
-                           race literature the wealthy  and educated could only once afford, Wilde </p>
-                           <img src="images/louvre.jpg" alt="Louvre" width="400" height="200" /> 
-
-                     <p> She had spent the last ten years  <a href="http://www.cmgww.com/historic/wilde/">Oscar Wiled</a>
-                      car Wilde's rich and dramatic portrayals of the human condition came during the height of the prosp
-                     erity that swept through London in the Victorian Era of the late 19th century. At a time when all ci
-                     tizens of Britain were finally able to embrace literature the wealthy and educated could only once a
-                     fford, Wilde </p>
-                    
-                     <h2> Order List </h2>
-                          <ol>
-                             <li>Chop potatoes into quaters</li>
-                             <li>Simmer in salted water for 15-20 minutes unti tender </li>
-                             <li>Heat mil</li>
-                             <li>Drain potatoes</li>
-                             <li>Mi</li>
-                          </ol>
-                     <h2> Unordered List</h2>
-                        <ul>
-                             <li>Mouses</li>
-                             <li>Pastries</li>
-                                <ul>
-                                    <li>Croissant</li>
-                                    <li>Mille-feuille</li>
-                                    <li>Palmier</li>
-                                    <li>Profiterole</li>
-                                </ul>
-                            <li>Tarts</li>
-                        </ul> 
-                     <h2>Blockquote</h2>
-                        <blockquote><p>The only ...
-                            --Mignon McLaughlin
-                        </blockquote>
-
-
-
-
-                     
-
+                    <h1><image src="images/zeldman.png" width="400" lenght="200" alt="graphic image of zeldman"> 
+                    The autobioghraphy of  John Doe</h1>
+                 <!--  
 
          -->          
     </body>
