--- a/victor-filatov.html
+++ b/victor-filatov.html
@@ -15,14 +15,26 @@
              truth as old as standards-based design: Construct your markup to properly support your
              content (not your design).</p>
 
-        <p>Modular/atomic design doesn't change this truth, it just reinforces its wisdom.
-           Flexbox and grid layout don't change this truth, they just make it easier to do
-           it better. HTML5 doesn't change this truth, it just reminds us that the separation
+        <p>Modular/<a href="http://bradfrost.com/blog/post/atomic-web-design/"> atomic design </a>
+           doesn't change this truth, it just reinforces its wisdom.
+           <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/"> Flexbox </a> 
+           and <a href="https://css-tricks.com/snippets/css/complete-guide-grid/"> grid layout </a>
+            don't change this truth, they just make it easier to do
+           it better.<a href="https://html5forwebdesigners.com/design/index.html"> HTML5 </a>
+           doesn't change this truth, it just reminds us that the separation
            of structure from style came into existence for a reason. A reason that hasn't
            changed. A reason that cannot change, because it is the core truth of the web,
            and is inextricably bound up with the promise of this medium.</p>
 
-<!--Separating structure from style and behavior was the web standards movement's prime revelation, and each generation of web designers discovers it anew. This separation is what makes our content as backward-compatible as it is forward-compatible (or "future-friendly," if you prefer). It's the key to re-use. The key to accessibility. The key to the new kinds of CMS systems we're just beginning to dream up. It's what makes our content as accessible to an ancient device as it will be to an unimagined future one.
+        <p>Separating structure from style and behavior was the web standards movement's prime
+           revelation, and each generation of web designers discovers it anew. This separation
+           is what makes our content as backward-compatible as it is forward-compatible (or
+           "future-friendly," if you prefer). It's the key to re-use. The key to accessibility.
+           The key to the new kinds of CMS systems we're just beginning to dream up. It's what
+           makes our content as accessible to an ancient device as it will be to an unimagined 
+           future one.</p>
+           
+           <!--
 Every time a leader in our field discovers, as if for the first time, the genius of this separation between style, presentation, and behavior, she is validating the brilliance of web forbears like Tim Berners-Lee, Håkon Wium Lie, and Bert Bos.
 Every time a Dan or an Ethan (or a Sara or a Lea) writes a beautiful and insightful article like the two cited above, they are telling new web designers, and reminding experienced ones, that this separation of powers matters.
 And they are plunging a stake into the increasingly slippery ground beneath us.
