--- a/victor-filatov.html
+++ b/victor-filatov.html
@@ -33,7 +33,31 @@
            The key to the new kinds of CMS systems we're just beginning to dream up. It's what
            makes our content as accessible to an ancient device as it will be to an unimagined 
            future one.</p>
-           
+
+        <p>Every time a leader in our field discovers, as if for the first time, the genius 
+           of this separation between style, presentation, and behavior, she is validating
+           the brilliance of web forbears like <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee"> 
+           Tim Berners-Lee</a>, <a href="https://en.wikipedia.org/wiki/Håkon_Wium_Lie"> Håkon Wium Lie </a>, 
+           <a href="https://en.wikipedia.org/wiki/Bert_Bos" >Bert Bos</a>.<p>
+           <br />      
+        <p>Every time a Dan or an Ethan (or a<a href="https://sarasoueidan.com/">Sara</a> or a
+           <a href="http://lea.verou.me/"> Lea</a>>) 
+           writes a beautiful and insightful article like the two cited above, they are telling
+           new web designers, and reminding experienced ones, that this separation of powers matters.</p>
+        <p>And they are plunging a stake into the increasingly slippery ground beneath
+            us.</p>
+        <p>Why is it slippery? Because too many developers and designers in our amnesiac community
+           have begun to believe and share bad ideas — ideas, like CSS isn’t needed, HTML isn’t needed,
+           <a href="http://alistapart.com/article/understandingprogressiveenhancement">progressive enhancement</a>
+           is old-fashioned and unnecessary, and so on. Ideas that, if followed,
+           will turn the web back what it was becoming in the late 1990s: a wasteland of walled gardens
+           that said no to more people than they welcomed. Let that never be so. We have the power.</p>
+        <p>As Maimonides, were he alive today, would tell us: he who excludes a single user destroys a 
+           universe. Web standards now and forever.</p>
+
+
+
+
            <!--
 Every time a leader in our field discovers, as if for the first time, the genius of this separation between style, presentation, and behavior, she is validating the brilliance of web forbears like Tim Berners-Lee, Håkon Wium Lie, and Bert Bos.
 Every time a Dan or an Ethan (or a Sara or a Lea) writes a beautiful and insightful article like the two cited above, they are telling new web designers, and reminding experienced ones, that this separation of powers matters.
