--- a/victor-filatov.html
+++ b/victor-filatov.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title><h1> Of Patterns and Power: Web Standards Then & Now</h1></title>
-        <meta charset="utf-8">     
+        <meta charset="utf-8">
+        <link rel="stylesheet"  href="css/main.css">     
     </head>
     <body> 
        <article>
@@ -10,14 +11,14 @@
                 
        <h1><img src="images/zeldman.png" width="400" lenght="200" alt="graphic image of zeldman"> 
                     Of Patterns and Power: Web Standards Then & Now </h1>
-        <p>IN <a href="http://danielmall.com/articles/content-display-patterns/">“CONTENT Display Patterns” </a>
+        <p id="intro">IN <a href="http://danielmall.com/articles/content-display-patterns/">“CONTENT Display Patterns” </a>
            (which all front-end folk should read), Dan Mall points
            to a truth not unlike the one <a href="https://24ways.org/2015/putting-my-patterns-through-their-paces/">
            Ethan Marcotte shared last month </a> on 24 ways. It is a 
            truth as old as standards-based design: Construct your markup to properly support your
            content (not your design).</p>
 
-        <p>Modular/<a href="http://bradfrost.com/blog/post/atomic-web-design/"> atomic design </a>
+        <p id="second">Modular/<a href="http://bradfrost.com/blog/post/atomic-web-design/"> atomic design </a>
            doesn't change this truth, it just reinforces its wisdom.
            <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/"> Flexbox </a> 
            and <a href="https://css-tricks.com/snippets/css/complete-guide-grid/"> grid layout </a>
