--- a/victor-filatov.html
+++ b/victor-filatov.html
@@ -9,7 +9,7 @@
        <article>
         <section>     
                 
-       <h1><img src="images/zeldman.png" width="400" lenght="200" alt="graphic image of zeldman"> 
+       <h1 class="therdcolor"><img src="images/zeldman.png" width="400" lenght="200" alt="graphic image of zeldman"> 
                     Of Patterns and Power: Web Standards Then & Now </h1>
         <p id="intro">IN <a href="http://danielmall.com/articles/content-display-patterns/">“CONTENT Display Patterns” </a>
            (which all front-end folk should read), Dan Mall points
@@ -29,7 +29,7 @@
            changed. A reason that cannot change, because it is the core truth of the web,
            and is inextricably bound up with the promise of this medium.</p>
 
-        <p>Separating structure from style and behavior was the web standards movement's prime
+        <p class="therdcolor">Separating structure from style and behavior was the web standards movement's prime
            revelation, and each generation of web designers discovers it anew. This separation
            is what makes our content as backward-compatible as it is forward-compatible (or
            "future-friendly," if you prefer). It's the key to re-use. The key to accessibility.
