trying to change a word collor

--- a/victor-filatov.html
+++ b/victor-filatov.html
@@ -43,11 +43,11 @@
            Tim Berners-Lee</a>, <a href="https://en.wikipedia.org/wiki/Håkon_Wium_Lie"> Håkon Wium Lie </a>, 
            <a href="https://en.wikipedia.org/wiki/Bert_Bos" >Bert Bos</a>.<p>
            <br />      
-        <p>Every time a Dan or an Ethan (or a<a href="https://sarasoueidan.com/">Sara</a> or a
+        <p>Every time a an Ethan (or a<a href="https://sarasoueidan.com/">Sara</a> or a
            <a href="http://lea.verou.me/"> Lea</a>>) 
            writes a beautiful and insightful article like the two cited above, they are telling
            new web designers, and reminding experienced ones, that this separation of powers matters.</p>
-        <p>And they are plunging a stake into the increasingly slippery ground beneath
+        <p>And they are plinting a  stake into the increasingly slippery ground beneath
             us.</p>
         <p>Why is it slippery? Because too many developers and designers in our amnesiac community
            have begun to believe and share bad ideas — ideas, like CSS isn’t needed, HTML isn’t needed,
